Assignment 3.2 – Restaurant App

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h3>Weekly Assignments</h3>
         <ul>
             <li><a class="link-styles" href="./week-2/bradley-palindrome.html">Assignment 2.2</a></li>
-            <li>Assignment 3.2</li>
+            <li><a class="link-styles" href="./week-3/bradley-restaurant.html">Assignment 3.2</a></li>
             <li>Assignment 4.2</li>
             <li>Assignment 5.2</li>
             <li>Assignment 6.2</li>
