--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li><a class="link-styles" href="./week-2/bradley-palindrome.html">Assignment 2.2</a></li>
             <li><a class="link-styles" href="./week-3/bradley-restaurant.html">Assignment 3.2</a></li>
             <li><a class="link-styles" href="./week-4/bradley-calorie.html">Assignment 4.2</a></li>
-            <li>Assignment 5.2</li>
+            <li><a class="link-styles" href="./week-5/bradley-bobs-auto-repair.html">Assignment 5.2</a></li>
             <li>Assignment 6.2</li>
             <li>Assignment 7.2</li>
             <li>Assignment 8.2</li>
