Week-6 and styling fixes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li><a class="link-styles" href="./week-3/bradley-restaurant.html">Assignment 3.2</a></li>
             <li><a class="link-styles" href="./week-4/bradley-calorie.html">Assignment 4.2</a></li>
             <li><a class="link-styles" href="./week-5/bradley-bobs-auto-repair.html">Assignment 5.2</a></li>
-            <li>Assignment 6.2</li>
+            <li><a class="link-styles" href="./week-6/bradley-future-value.html">Assignment 6.2</a></li>
             <li>Assignment 7.2</li>
             <li>Assignment 8.2</li>
         </ul>
@@ -54,55 +54,26 @@
     </div>
 
      <script>
-        /**
-         * Set the default theme to light if one has not been set in the browsers localStorage
-         */
         setDefaultTheme();
-
-        /**
-         * Function to switch the users selected website theme
-         * @param x (this instance)
-         */
-        function toggleMode(x)
-        {
-            let colorTheme = document.body.classList; // get the body's CSS class
-            let iconMode = x.classList; // get the current classes assigned to the triggered button
-
-            /**
-             * If the current body class is set to the light-theme, update the user's preference to the dark-theme in the browsers
-             * local storage.
-             */
-            if (colorTheme.value === "light-theme")
-            {
+        function toggleMode(x) {
+            let colorTheme = document.body.classList;
+            let iconMode = x.classList; 
+            if (colorTheme.value === "light-theme") {
                 localStorage.clear();
                 localStorage.setItem("mode", "dark-theme");
                 localStorage.setItem("iconMode", "fa-toggle-on");
                 localStorage.setItem("iconText", "Dark Mode");
-            }
-            /**
-             * If the current body class is set to the dark-theme, update the user's preference to the light-theme in the browsers
-             * local storage.
-             */
-            else
-            {
+            } else {
                 localStorage.clear();
                 localStorage.setItem("mode", "light-theme");
                 localStorage.setItem("iconMode", "fa-toggle-off");
                 localStorage.setItem("iconText", "Light Mode");
             }
-
-            /**
-             * Apply the updated selection to the HTML page elements
-             */
             colorTheme.value = localStorage.getItem("mode");
             iconMode.value = `fa ${localStorage.getItem("iconMode")} pull-right`;
             document.getElementById("icon-text").innerHTML = localStorage.getItem("iconText");
         }
 
-        /**
-         * Function to clear the browsers localStorage and set the default theme to light-theme.
-         * This function is for demonstration purposes only and does not need to be included in any of your solutions.
-         */
         function clearLocalStorage() {
             localStorage.clear();
             document.body.classList.value = "light-theme";
