--- a/week-2/bradley-palindrome.html
+++ b/week-2/bradley-palindrome.html
@@ -21,7 +21,8 @@ Description: HTML app the checks if a word is a plaindrom
     <link rel="stylesheet" href="../site.css">
 </head>
 <body class="light-theme wrapper">
-    <h1 class="app-header">Welcome to the Palindrome App!</h1>
+    <div class="assign-content">
+    <div class="app-header">Welcome to the Palindrome App!</div>
     <div class="card">
         <p class="card-title">Palindrome Checker</p>
         <form>
@@ -39,7 +40,7 @@ Description: HTML app the checks if a word is a plaindrom
     </div>
 
     <a href="../index.html" class="return-home text-styles">Return</a>
-
+    </div>
 
 <script>
     function getTodaysDate() {
