--- a/week-4/bradley-calorie.html
+++ b/week-4/bradley-calorie.html
@@ -22,7 +22,8 @@ Description: Calorie count search app
     <link rel="stylesheet" href="./bradley-calorie.css">
 </head>
 <body class="light-theme wrapper">
-    <h1 class="app-header">Welcome to the Calorie App!</h1>
+    <div class="app-header">Welcome to the Calorie App!</div>
+    <div class="assign-content">
     <div class="card">
         <p class="card-title">Calorie Search Form</p>
         <form autocomplete="off">
@@ -32,7 +33,7 @@ Description: Calorie count search app
             <span id="foodList"></span>
             <br>
             <br>
-            <button type="button" class="btn btn-primary" id="btnSearch">Search</button>
+            <button type="button" class="btn btn-primary full-width" id="btnSearch">Search</button>
         </form>
         
     </div>
@@ -49,8 +50,9 @@ Description: Calorie count search app
             </table>
         </div>
     </div>
- <a href="../index.html" class="return-home text-styles">Return</a>
 
+ <a href="../index.html" class="return-home text-styles">Return</a>
+</div>
     
     <script src="../theme.js"></script>
     <script type="module">
