--- a/week-6/bradley-future-value.html
+++ b/week-6/bradley-future-value.html
@@ -1,9 +1,8 @@
-
 <!-- 
 Title: bradley-future-value.html 
 Author: Gunner Bradley
-Date: 09/04/21
-Description: Calorie count search app
+Date: 09/17/21
+Description: Calculate future earnings
 -->
 <!DOCTYPE html>
 
@@ -80,7 +79,7 @@ Description: Calorie count search app
     <script type="module">
         import { FinanceCalculator } from "./finance-calculator.js";
         import { Validator } from "./validator.js";
-        
+
         document.getElementById("today").innerHTML = new Date().toLocaleDateString("en-US");
         document.getElementById("btnCalculate").onclick = () => {
 
