--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li><a class="link-styles" href="./week-4/bradley-calorie.html">Assignment 4.2</a></li>
             <li><a class="link-styles" href="./week-5/bradley-bobs-auto-repair.html">Assignment 5.2</a></li>
             <li><a class="link-styles" href="./week-6/bradley-future-value.html">Assignment 6.2</a></li>
-            <li>Assignment 7.2</li>
+            <li><a class="link-styles" href="./week-7/bradley-whatabook1.html">Assignment 7.2</a></li>
             <li>Assignment 8.2</li>
         </ul>
         <h3>Projects</h3>
