--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WEB 330 – Enterprise JavaScript II”</title>
+    <title>WEB 330 – Enterprise JavaScript II</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
@@ -35,7 +35,7 @@
             <li><a class="link-styles" href="./week-5/bradley-bobs-auto-repair.html">Assignment 5.2</a></li>
             <li><a class="link-styles" href="./week-6/bradley-future-value.html">Assignment 6.2</a></li>
             <li><a class="link-styles" href="./week-7/bradley-whatabook1.html">Assignment 7.2</a></li>
-            <li>Assignment 8.2</li>
+            <li><a class="link-styles" href="./week-8/bradley-whatabook2.html">Assignment 8.2</a></li>
         </ul>
         <h3>Projects</h3>
         <ul>
